<resources>
    <string name="app_name">OBD_NET</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">主界面</string>

    <!-- 时间 -->
    <string name="date_format_hhmm">HH:mm</string>
    <string name="date_format_mmdd">M月d日</string>
    <string name="date_format_mmddhhmm">M月d日 HH:mm</string>
    <string name="date_format_MMddHHmmssSSS">MM-dd HH:mm:ss.SSS</string>
    <string name="date_format_yyyymmdd">yyyy年M月d日</string>
    <string name="date_format_yyyymmdd2">yyyy-MM-dd</string>
    <string name="date_format_yyyymmdd3">yyyy.MM.dd</string>
    <string name="date_format_yyyymmdd4">yyyyMMdd</string>
    <string name="date_format_yyyymmdd5">yyyy-MM-dd HH:mm</string>
    <string name="date_format_yyyymmddhhmm">yyyy-M-d  HH:mm</string>
    <string name="date_format_yyyymmddhhmm2">yyyy年M月d日  HH:mm</string>
    <string name="date_format_yyyymmddhhmmss">yyyy-MM-dd HH:mm:ss</string>
    <string name="vaild_time_format">%1$s 至 %2$s </string>
    <string name="vaild_time_format2">%1$s - %2$s </string>
    <string name="vaild_time_format3">%1$s \n- %2$s </string>
    <string name="vaild_the_same_time_format">%1$s 当天有效 </string>
    <string name="from_the_end_of_time">还有%1$d天到期</string>
    <string name="due_today">今天到期</string>
    <string name="use_ticket_time">于%1$s使用</string>
    <string name="deal_surplus_time_format_dh">剩余：%1$d天%2$d小时</string>
    <string name="deal_surplus_time_format_hm">剩余：%1$d小时%2$d分钟</string>
    <string name="deal_surplus_time_format_m">剩余：%1$d分钟</string>
    <string name="zero">0%1$d</string>
    <string name="sample_activity">示列Activity</string>
    <string name="title_activity_fram">FramActivity</string>


    <!-- 登录注册 -->
    <string name="login">登录</string>
    <string name="login_account_hint">请输入手机号</string>
    <string name="login_password_hint">请输密码</string>
    <string name="login_register">新用户注册</string>
    <string name="login_register_code">请输入验证码</string>
    <string name="login_register_send_code">发送验证码</string>
    <string name="login_register_retrieve_password">找回密码</string>
    <string name="login_register_retrieve_password_phone">请输入你注册的手机号码</string>
    <string name="login_register_fill_in_text">您选择的车型是</string>
    <string name="login_register_fill_in_vin">请输入车辆VIN</string>
    <string name="login_register_fill_in_car">宝马 宝马3系 328i时尚型 2015款</string>
    <string name="login_register_finish_register">完成注册</string>
    <string name="login_add_car_info_text">设置车型后更能精准计算油耗,提醒保养</string>
    <string name="login_add_car_info_chose_car">车型选择</string>
    <string name="login_add_car_info_car_code">填写车牌</string>
    <string name="login_phone_is_null">手机号为空</string>
    <string name="login_phone_invalid">手机不合法</string>
    <string name="login_password_is_null">密码为空</string>
    <string name="login_succ">登陆成功</string>
    <string name="login_failed">登陆失败</string>

    <!--绑定设备-->
    <string name="bind_device_fill_in_sn">请输入sn码</string>
    <string name="bind_device_step1">您还没有连接到图吧汽车卫士</string>
    <string name="bind_device_step2">1.插入盒子,启动车辆怠速</string>
    <string name="bind_device_step3">2.扫描盒子上的sn码</string>
    <string name="bind_device_step4">3.绑定盒子</string>
    <string name="bind_device_bing">立即绑定</string>
    <string name="bind_device_relieve_bing">解除绑定</string>


    <string name="car_info_content">正确填写以上信息,有助于准确查看车辆数据</string>
    <!--设置-->
    <string name="car_setting_account">账户设置</string>
    <string name="car_setting_remind">通知提醒</string>
    <string name="car_setting_clear">清除缓存</string>
    <!--设备信息-->
    <string name="car_bind_device_info_state">当前状态</string>
    <string name="car_bind_device_info_sn">设备SN码</string>
    <string name="car_bind_device_info_bing_time">绑定时间</string>
    <string name="car_bind_device_info_last_time">最后使用时间</string>
    <string name="car_bind_device_info_phone">绑定手机</string>
    <string name="car_bind_device_info_sim">Sim卡</string>

    <string name="main_text_route">行程</string>
    <string name="main_text_vehicle_condition">车况</string>
    <string name="main_text_examination">体检</string>
    <string name="main_text_mine">我</string>
</resources>
