<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eeeeee"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rela_sn"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/rela_phone"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        >


        <EditText
            android:id="@+id/et_fill_in_sn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_inputbox"
            android:hint="@string/bind_device_fill_in_sn"
            android:singleLine="true"
            android:textColorHint="#A6A7A7"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/btn_retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:background="@drawable/ic_scan"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_attention"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:text="@string/bind_device_step1"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="@string/bind_device_step2"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="@string/bind_device_step3"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="@string/bind_device_step4"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/bt_retrieve_password"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/btn_green"
        android:text="@string/bind_device_bing"
        android:textColor="#ffffff"
        android:textSize="13sp"/>
</LinearLayout>