<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="#eeeeee"
              >


    <EditText
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:digits="0123456789"
        android:hint="@string/login_account_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:singleLine="true"
        android:textColorHint="#A6A7A7"
        android:textSize="15sp"
        android:background="@drawable/bg_inputbox"/>
    <EditText
        android:layout_below="@+id/register_phone"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/register_code"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:digits="0123456789"
        android:hint="@string/login_register_code"
        android:maxLength="6"
        android:singleLine="true"
        android:textColorHint="#A6A7A7"
        android:textSize="15sp"
        android:background="@drawable/bg_inputbox"/>
    
    <Button
        android:id="@+id/bt_send_code"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textSize="13sp"
        android:layout_below="@+id/register_phone"
        android:text="@string/login_register_send_code"
        android:layout_alignRight="@+id/register_phone"
        android:background="@drawable/btn_green"/>
    <EditText
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="#A6A7A7"
        android:textSize="15sp"
        android:background="@drawable/bg_inputbox"
        android:layout_below="@+id/register_code"/>

    <Button
        android:id="@+id/bt_retrieve_password"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textSize="13sp"
        android:layout_below="@+id/register_password"
        android:text="@string/login_register_retrieve_password"
        android:layout_alignRight="@+id/register_phone"
        android:background="@drawable/btn_green"/>
</RelativeLayout>