<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/car_bind_device_info_state"
            android:textColor="@color/black_text"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="18dp"
            android:text="设备离线"
            android:textColor="@color/gray_text"
            android:textSize="12sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/car_bind_device_info_sn"
            android:textColor="@color/black_text"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="18dp"
            android:text="1111111111111"
            android:textColor="@color/gray_text"
            android:textSize="12sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/car_bind_device_info_bing_time"
            android:textColor="@color/black_text"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="18dp"
            android:text="2222222222"
            android:textColor="@color/gray_text"
            android:textSize="12sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/car_bind_device_info_last_time"
            android:textColor="@color/black_text"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="18dp"
            android:text="222222222222"
            android:textColor="@color/gray_text"
            android:textSize="12sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/car_bind_device_info_phone"
            android:textColor="@color/black_text"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="18dp"
            android:text="15901200268"
            android:textColor="@color/gray_text"
            android:textSize="12sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/car_bind_device_info_sim"
            android:textColor="@color/black_text"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="18dp"
            android:text="正常"
            android:textColor="@color/gray_text"
            android:textSize="12sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:background="@color/gray_line"/>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_retrieve_password"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/btn_green"
        android:text="@string/bind_device_relieve_bing"
        android:textColor="#ffffff"
        android:textSize="13sp"/>
</LinearLayout>