<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_login"
                >

<ImageView
    android:id="@+id/iv_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="80dp"
    android:src="@drawable/ic_logo"/>

    <RelativeLayout
        android:id="@+id/rela_phone"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/iv_logo"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_user"/>

        <EditText

            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:background="@color/transparent"
            android:digits="0123456789"
            android:hint="@string/login_account_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="#CCFFFFFF"
            android:textColorHint="#CCFFFFFF"
            android:textSize="15dp"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/rela_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#CCFFFFFF"/>
    <RelativeLayout
        android:id="@+id/rela_password"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/rela_phone"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_code"/>

        <EditText

            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:background="@color/transparent"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="#CCFFFFFF"
            android:textColorHint="#CCFFFFFF"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/btn_retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_question"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/rela_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#CCFFFFFF"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/rela_password"
        android:layout_margin="40dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login_register"
        android:textColor="#ffffff"
        />
</RelativeLayout>